charts/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: jenkins-ingress
 annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
 tls:
 - hosts:
   - jenkins.dusktify.com
   secretName: jenkins-ingress-tls
 rules:
 - host: jenkins.dusktify.com
   http:
     paths:
     - backend:
         service:
           name: jenkins
           port:
             number: 8080
       path: /
       pathType: Prefix
